--- a/package.json
+++ b/package.json
@@ -4,7 +4,19 @@
   "main": "index.js",
   "author": "Olly.W",
   "license": "MIT",
+  "scripts": {
+    "start": "babel-node --presets es2015 index.js",
+    "dev": "nodemon --exec babel-node --presets es2015 index.js"
+  },
   "dependencies": {
-    "googleapis": "^19.0.0"
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "colors": "^1.1.2",
+    "googleapis": "^19.0.0",
+    "lodash": "^4.17.4",
+    "mongodb": "^2.2.27",
+    "mongoose": "^4.10.2",
+    "nodemon": "^1.11.0",
+    "ramda": "^0.23.0"
   }
 }
